--- a/VRChat/77/1294977.html
+++ b/VRChat/77/1294977.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "gfmJeIhXy2ErVX/m6Ri3mTaJd1MEGPt5/rSO283BGio="></script>
+    "/w8NKXOwYeP9r5xjb0NG8/FQOSd5jA7XyCriwUfSgzI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"元号 テーブル(無償版あり)","description":"元号テーブルです\n\n4/1の元号発表の時にあなただけの元号を発表してみませんか？\n\n\n【注意】\n本データはBlender上で制作されたものです。\nMaya等別のソフトウェアで読み込み時に不具合が生じる可能性がありますのでご了承ください。\n\n\n\nVRC,cluster向けのオリジナル3Dモデルです。\n\n\nポリゴン数(三角面)：2717\nマテリアル数：2\nFBX,Blenderファイル,Unityパッケージ,VRM\n\n本データを利用したことによって生じるいかなる損害に対して当方は一切責任を負いません。\n\n\n◆禁止事項\n・本データの再配布は禁止です。\n・粗末に扱うような行動。\n\n◆やってもいいことの一例\n・データの改変\n・営利利用\n・映像制作\n・動画配信\n\n\n連絡先\nTwitter:@194_alert","url":"https://booth.pm/ja/items/1294977","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/d23f9e65-f92e-4097-a89c-7e4c1b80cd5b/i/1294977/3c203fe2-be37-469f-a6bd-aa141981f385_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="gfmJeIhXy2ErVX/m6Ri3mTaJd1MEGPt5/rSO283BGio="></script>
+    nonce="/w8NKXOwYeP9r5xjb0NG8/FQOSd5jA7XyCriwUfSgzI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -463,9 +463,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
