--- a/VRChat/48/1294948.html
+++ b/VRChat/48/1294948.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "UmgKjvyrgj2fgip7gXDAWBTHqMpyTP3LqspSUFdFvgs="></script>
+    "E3AWP00vTQiWbFTLQILeUQcFLXBwLbDdoKhJBpJ03fs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ふで","description":"FBX形式の筆の3Dモデルです。\n\nVRChatでの使用を想定しております。\n\n3Dモデルの練習として作ったので、ご自由にお使いください。\n\n筆先が　白　黒　赤　の3枚のpngファイルがはいっております。\n\n筆先にボーンを入れてありますので、ダイナミックボーンをご用意していただくと揺らすこともできます。\n\n\n※気に入っていただけたら『どんぐりのアクセサリ』を購入していただけると蓮華がよろこびます（*´ω｀)\nhttps://rengekomochiba.booth.pm/items/1583819","url":"https://booth.pm/ja/items/1294948","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/2f0f402e-63da-4c0f-bd06-22c801de949b/i/1294948/a6a2c93b-39f3-45df-9f9b-0177904348ff_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="UmgKjvyrgj2fgip7gXDAWBTHqMpyTP3LqspSUFdFvgs="></script>
+    nonce="E3AWP00vTQiWbFTLQILeUQcFLXBwLbDdoKhJBpJ03fs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -345,9 +345,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
