--- a/VRChat/45/1294245.html
+++ b/VRChat/45/1294245.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "U46yJOiNCzZjvv1QKmu7DpLmnA9oAjSSE1QO41H/Qos="></script>
+    "chW6pGWF3rA/z5z4KD73aV0KeThmzLtD0DZBRIQbZVM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"またたび缶","description":"\n\n\n\n【またたび缶】\n\nVRChat向け・小物アイテム\nポリゴン数：1960\n\n【内容】\n\n■readme.txt\n\n■matatabi.unitypackage\n　→またたび缶モデルとテクスチャ、マテリアル、サウンドデータ\n　　Prefabデータ３種\n  （またたびパーティクル、ハートパーティクル、ふりふり音Audio）\n　※またたび粉の色については、リアルにしすぎると花粉や埃のように見えてしまったためあえてピンクにしております。\n\n■モデル・テクスチャ改造用フォルダ\n　　□またたび.fbx\n　　□またたび.png\n　　□またたび(UV).png\n\n\n【使用方法】\nUnityにmatatabi.unitypackageをimportしてください。\nまたたび缶をアバターにセットしご利用ください。\nmatatabi_Particle.prefabが、またたび粉のパーティクル、\nheart_Particle.prefabが、ハートのパーティクル、\nhurihuri_Source.prefabが、ふりふり音のAudio設定のサンプルです。\nパーティクルのワールド固定や、各パーティクルの表示切替については、\nご自分で設定いただければと思います。\n※宣伝動画ではワールド固定については、FixedJointとパーティクルのワールド固定設定を、\n　パーティクルの表示切替はEmissionのRate over Timeをアニメーションオーバーライドに設定しております。\n　設定方法などわからない場合はご連絡いただければと思います。\n\n\n【※注意事項】\n\n・このファイルを使用して発生したいかなるトラブルにも責任を負いかねます\n・改変等はご自由にどうぞ！\n・製作者を騙ることを禁止します。\n・モデルの再配布を禁止します。\n・良識の範囲でのご使用をお願い致します。\n・予告なく規約変更、配布停止、使用禁止にする事があります。\n\n制作者:土司空〈DOSHIKU〉\nhttps://twitter.com/airgaogao \n\nご不明な点、バグなどございましたらご連絡いただけますと幸いです。\n\n2019.03.29　販売開始\n","url":"https://booth.pm/ja/items/1294245","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/e201f4f8-6bc0-4319-ac66-863763d14127/i/1294245/0fcab1e9-b9c0-4da4-aa7f-c0b46bb862fd_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="U46yJOiNCzZjvv1QKmu7DpLmnA9oAjSSE1QO41H/Qos="></script>
+    nonce="chW6pGWF3rA/z5z4KD73aV0KeThmzLtD0DZBRIQbZVM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -497,9 +497,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
