--- a/VRChat/19/1293819.html
+++ b/VRChat/19/1293819.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "jS3dQENzYa0tkVzUP6AGE5o1x51i5sH9VW0xCYrkwIo="></script>
+    "4WPuF1UMDFDI/cYFRrSLhNE5V7o8F/ZRRrzVlOgLWEQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"犬子屋【ショートデニムパンツ(肌テクスチャ)】VRoid\u0026セシル変身","description":"【利用契約および設定方法】\n※ご購入前にお読みください。\n\nこの商品は【ショートデニムパンツ】単品販売です。\n\n【コート】【ショートデニム】【ベルトブーツ】とその他がセットになった商品もございます。\nhttps://isekaiinuko.booth.pm/items/1293789\n単品での購入よりもお得なセットになっていますので、ご購入の際はこちらをご検討ください。\nまた、返金などの対応はいたしかねます。\nくれぐれも【重複購入】にはお気つけください。\n\n『VRoid　設定方法』\n体系編集\n肌のテクスチャ。\n＋ボタンを押して新規にレイヤーを作成。\nレイヤー←Sデニム\nレイヤー←フィンガーレスグローブ\nレイヤー←ニーハイソックス\nにそれぞれインポート。\n操作を間違えた場合はCtrl+Zキーで一つ前にやり直しができます。\n\n『セシル変身　設定方法』\nUserData\n↓\nTexture\n↓\nUserの順番に展開。\n↓\n適用したいファイルをコピーして置き換え。\n↓\nセシル変身側ワンピースまたは素体選択時『肌/影』の項目を左から２番目の【U】に選択したのち『設定』の項目より『ユーザーテクスチャ読み込み』で適用させてください。\nなおセシル変身用には一部仕様が異なります。\nあらかじめご了承ください。\n\n【購入した商品の利用は自由です】\n『再配布』することは禁止ですが、それ以外の制限はとくにございません。\nVRoid制作はもちろん。\nUnity経由でVRchatへ。\nセシル変身用に使ったり。\n変換してMMDやその他への流用。\nゲーム制作や改変しての使用などなど。\nご自由にお使いください！\nなおクレジット表記は任意で大丈夫です。\n気にせずお使いください！\n\nあなたの理想を形に。\n『犬子屋』はVRoid活動を応援しています。\n\nそれとツイートの際は是非\n#犬子屋 と書いてツイートしください。\n拝見させていただきます！","url":"https://booth.pm/ja/items/1293819","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"300","highPrice":"900"},"image":"https://booth.pximg.net/c/620x620/f22bc1b2-b53f-45cb-ab46-6930cde3bab7/i/1293819/f82948ce-9738-4850-833d-0ef0e3a4bdbc_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="jS3dQENzYa0tkVzUP6AGE5o1x51i5sH9VW0xCYrkwIo="></script>
+    nonce="4WPuF1UMDFDI/cYFRrSLhNE5V7o8F/ZRRrzVlOgLWEQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -164,7 +164,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      122
+                                      123
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -180,7 +180,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      122
+                                      123
                                     </div>
                                   </div></a>
                                 </div>
@@ -898,9 +898,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
