--- a/VRChat/89/1293789.html
+++ b/VRChat/89/1293789.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "/OaC0oUWIgib7xSEZfcnJshTlqpnaEGJbN6cjJOfpK8="></script>
+    "RX6ea/llL6pjdTjK+ff9GoU6DhGRlYzNHQdQ8ccMXqE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"犬子屋【コートスタイルセット】VRoid＆セシル変身","description":"【利用契約および設定方法】\n※ご購入前にお読みください。\n\nこの商品は\n【コート】【デニム】【ブーツ】\nその他がセットになったお得な商品です。\n単品でお求めの場合はこちらからご購入が出来ます。\n\n【デニム】\nhttps://isekaiinuko.booth.pm/items/1293819\n\n【コート】\nhttps://isekaiinuko.booth.pm/items/1295216\n\n【ブーツ】\nhttps://isekaiinuko.booth.pm/items/1266953\n\n返金などの対応はいたしかねますのでくれぐれも【重複購入】にはお気をつけください。\n\n【利用規約】\n\n本商品は『再配布』することおよび\n『自分が制作したと偽る行為』を禁止いたします。\nVRoidHubでキャラクターを公開するのは大丈夫です。\nセキュリティ上『閲覧』のみにしていただき、他の人のダウンロード設定を必ず『NG』にしてください。\n\nそれさえ守っていただければ制限はとくにございません！\n動画配信、VTuber用の衣装にも大活躍！\nクレジット表記は任意で大丈夫です！\n気にせずお使いください！\n____________________________\n\n『VRoid　設定方法』\n体系編集\n肌テクスチャ。\n＋ボタンを押して新規にレイヤーを作成。\nレイヤー←Sデニム\nレイヤー←キャミソール\nレイヤー←フィンガーレスグローブ\nレイヤー←ロング用テクスチャ\nレイヤー←ニーハイソックス\nにそれぞれインポート。\n操作を間違えた場合はCtrl+Zキーで一つ前にやり直しができます。\n\n衣装編集\n袖の太さ→30\n袖の絞り→25\nスカートの広がり→0\n\n『セシル変身　設定方法』\nUserData\n↓\nTexture\n↓\nUserの順番に展開。\n↓\n適用したいファイルをコピーして置き換え。\n↓\nワンピース選択時『服』および『肌/影』の項目から【U】を選択したのち『設定』の項目より『ユーザーテクスチャ読み込み』で適用させてください。\nなおセシル変身では一部仕様が異なります。\nあらかじめご了承ください。","url":"https://booth.pm/ja/items/1293789","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"500","highPrice":"1500"},"image":"https://booth.pximg.net/c/620x620/f22bc1b2-b53f-45cb-ab46-6930cde3bab7/i/1293789/67acc110-ee2c-408b-a8e6-0b61002c855c_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="/OaC0oUWIgib7xSEZfcnJshTlqpnaEGJbN6cjJOfpK8="></script>
+    nonce="RX6ea/llL6pjdTjK+ff9GoU6DhGRlYzNHQdQ8ccMXqE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -961,9 +961,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
