--- a/VRChat/40/1293040.html
+++ b/VRChat/40/1293040.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "YqlkAx+R3rCneYD+FxTB1NOB8wh2uRJ/50kl56KcepU="></script>
+    "yezKWpdMns/yBtq8D5Cc7hFqsXeq6LZ2mEs1o4DIka8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【太刀】童子切安綱 (PBR/4K)","description":"あの酒呑童子を切ったという伝説を持つ日本の国宝童子切安綱。\n一千年の時を超えてもなおその切れ味は未だ鈍らないとか。\nそんな様々な逸話を持つ太刀を3Dモデルで再現しました!\n拵は安土桃山時代のものになります。","url":"https://booth.pm/ja/items/1293040","offers":{"priceCurrency":"JPY","@type":"Offer","price":"440"},"image":"https://booth.pximg.net/c/620x620/5e3688dc-a990-4181-9d0b-7698aa7c892e/i/1293040/84dbe935-b71d-447e-b84e-18e1172a156f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="YqlkAx+R3rCneYD+FxTB1NOB8wh2uRJ/50kl56KcepU="></script>
+    nonce="yezKWpdMns/yBtq8D5Cc7hFqsXeq6LZ2mEs1o4DIka8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -501,9 +501,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
