--- a/VRChat/62/1293262.html
+++ b/VRChat/62/1293262.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "fJFODulrYcbvvtrpEHKOjSK7w1JbSqNkhEo9gBBRwc8="></script>
+    "QUbAXT7zVNUd0ZsWptaOwdwIgH30XBMXT6yWaw/wq48="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat想定武器】「九十六式竜頭砲」","description":"概要\n\n\nVRChatでの使用を想定したオリジナル3Dモデルです、ポリゴン数が42933あるのでアップロードの際には注意してください\n作者:プラスチックわかめ　　　ツイッターid:@plastic_seaweed\n\n\n商品内容\n\n・Iron spirit\n・dragon\n・Toon\nprefab入りのユニティパッケージがあります\n\n・Substance Painter\n中に.spファイルが入っています、Substance Painterを持ってる方はこちらを利用すると改変が行いやすいです\n\n・96-canon.fbx\n3Dモデルデータです\n\n・readme\n利用規約が書いてあります\n\n\n\n利用規約\n\n本製品をご購入された時点で当規約に同意したものとみなします\n\n・九十六式竜頭砲（以下本モデル）の著作権は、改変の有無にかかわらず本モデル作者プラスチックわかめに帰属します\n\n・本モデルの改変は自由です\n\n・本モデル購入者がVRChat等へのアプリケーションへのアップロードすることを許可します。\n\n・本モデル購入者が制作しているゲーム等へ本モデルを利用することを許可します。\n　また、これによって金銭が生じるようなものであっても構いませんが、クレジット表記必須です\n\n・本モデルの改変の有無にかかわらず、あらゆる形での再配布を禁じます\n　但し自作ゲーム等に含まれている場合などでは構いません\n\n・本モデルを利用してのあらゆる形での人への迷惑行為等を禁じます\n\n・当利用規約において翻訳の都合上他言語との差異が生じた場合、日本語の利用規約を適用するものとします\n\n・本モデル作者プラスチックわかめは本モデルを利用したことにより生じた、あらゆる形での損害や損失に対しての責任を一切負わないものとします\n\nアップデート\n2020/1/3　価格を改定（1500円→1000円）\n　　　　　導入を行い易いようユニパッケージの追加\n　　　　　既存の物のファイル階層を見直し","url":"https://booth.pm/ja/items/1293262","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/cd8217e8-6855-47bf-84aa-57b1e35d37ab/i/1293262/36c2db26-cbe1-4e02-94d4-00d153335609_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="fJFODulrYcbvvtrpEHKOjSK7w1JbSqNkhEo9gBBRwc8="></script>
+    nonce="QUbAXT7zVNUd0ZsWptaOwdwIgH30XBMXT6yWaw/wq48="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -483,9 +483,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
